--- a/pages/influencers.html
+++ b/pages/influencers.html
@@ -15,7 +15,7 @@
 				<li class="nav-top__menu-item">Store</li>
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
-			<div class="nav-top__logo nav-top__logo--light"></div>
+			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
 		</div>
 	</header>
 	<main>
@@ -26,7 +26,7 @@
 				<p>We work with our influencers to follow the latest trends and to develop campaings thats have a strong impact; we don't just send them products on your behalf and hope they say something about it, we bring our influencers to the development of the campaign, working with them to get the best from their networks by creating content that works.</p>
 			</div>
 			<div class="icons icons--light">
-				<div class="icons__icon">
+				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
 				</div>
