--- a/pages/production.html
+++ b/pages/production.html
@@ -15,7 +15,7 @@
 				<li class="nav-top__menu-item">Store</li>
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
-			<div class="nav-top__logo nav-top__logo--light"></div>
+			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
 		</div>
 	</header>
 	<main>
@@ -37,7 +37,7 @@
 					<div class="icons__image icons__image"></div>
 					<div class="icons__text">Ads</div>
 				</div>
-				<div class="icons__icon">
+				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
 				</div>
