--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -15,7 +15,7 @@
 				<li class="nav-top__menu-item">Store</li>
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
-			<div class="nav-top__logo nav-top__logo--light"></div>
+			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
 		</div>
 	</header>
 	<main>
@@ -33,7 +33,7 @@
 					<div class="icons__image icons__image"></div>
 					<div class="icons__text">Icon 2</div>
 				</div>
-				<div class="icons__icon">
+				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home"></div>
 					<div class="icons__text">Home</div>
 				</div>
