--- a/pages/vr.html
+++ b/pages/vr.html
@@ -15,7 +15,7 @@
 				<li class="nav-top__menu-item">Store</li>
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
-			<div class="nav-top__logo nav-top__logo--light"></div>
+			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
 		</div>
 	</header>
 	<main>
@@ -29,7 +29,7 @@
 				<p>Download our VR Studios app to get the very best virtual reality experience. We'll keep tge content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
 			</div>
 			<div class="icons icons--light">
-				<div class="icons__icon">
+				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
 				</div>
