--- a/pages/work.html
+++ b/pages/work.html
@@ -14,7 +14,7 @@
 				<li class="nav-top__menu-item">Store</li>
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
-			<div class="nav-top__logo nav-top__logo--dark"></div>
+			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
 		</div>
 	</header>
 	<main>
@@ -27,7 +27,7 @@
 				<h2>Wanna play?</h2>
 			</div>
 			<div class="icons">
-				<div class="icons__icon">
+				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home"></div>
 					<div class="icons__text">Home</div>
 				</div>
