move icons in html on all pages

--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -16,6 +16,12 @@
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
+			<div class="nav-top__burger-icon">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 		</div>
 	</header>
 	<main>
@@ -23,6 +29,9 @@
 			<div class="copy">
 				<h1>Thinking</h1>
 				<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
+			</div>
+			<div class="media">
+				
 			</div>
 			<div class="icons icons">
 				<div class="icons__icon">
@@ -37,9 +46,6 @@
 					<div class="icons__image icons__image--home"></div>
 					<div class="icons__text">Home</div>
 				</div>
-			</div>
-			<div class="media">
-				
 			</div>
 		</div>
 	</main>
