--- a/pages/vr.html
+++ b/pages/vr.html
@@ -16,6 +16,12 @@
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
+			<div class="nav-top__burger-icon">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 		</div>
 	</header>
 	<main>
@@ -26,6 +32,13 @@
 				<p>We have all the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smartphone app for your content.</p>
 				<p>Get in touch today; we'd love to help bring your brand to life, truly, from the virtual world!</p>
 				<p>Download our VR Studios app to get the very best virtual reality experience. We'll keep tge content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
+			</div>
+			<div class="media">
+				<div class="videos">
+					<div class="videos__video videos__video--full-width"></div>
+					<div class="videos__video videos__video--half-width"></div>
+					<div class="videos__video videos__video--half-width"></div>
+				</div>
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/')">
@@ -39,13 +52,6 @@
 				<div class="icons__icon">
 					<div class="icons__image icons__image"></div>
 					<div class="icons__text">Goggles</div>
-				</div>
-			</div>
-			<div class="media">
-				<div class="videos">
-					<div class="videos__video videos__video--full-width"></div>
-					<div class="videos__video videos__video--half-width"></div>
-					<div class="videos__video videos__video--half-width"></div>
 				</div>
 			</div>
 		</div>	
