--- a/pages/work.html
+++ b/pages/work.html
@@ -15,6 +15,12 @@
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
+			<div class="nav-top__burger-icon">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 		</div>
 	</header>
 	<main>
@@ -25,12 +31,6 @@
 				<p>Simple. We work with you and your brand to develop campigns and content that inspires your brand and community. From fun and fantastic to the business of business; TAG The Agency can create camapigns and content that hits the mark!</p>
 				<p>Need a little help with your advertising? Need it to win in social media? Not sure if your brand could play in this space? TAG us in; we'd love to play!</p>
 				<h2>Wanna play?</h2>
-			</div>
-			<div class="icons">
-				<div class="icons__icon" ng-click="go('/')">
-					<div class="icons__image icons__image--home"></div>
-					<div class="icons__text">Home</div>
-				</div>
 			</div>
 			<div class="media">
 				<div class="work-examples">
@@ -92,6 +92,12 @@
 							<div class="work-examples__color-strip work-examples__color-strip--half-pink"></div>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="icons">
+				<div class="icons__icon" ng-click="go('/')">
+					<div class="icons__image icons__image--home"></div>
+					<div class="icons__text">Home</div>
 				</div>
 			</div>
 		</div>
