--- a/pages/vr.html
+++ b/pages/vr.html
@@ -35,9 +35,15 @@
 			</div>
 			<div class="media">
 				<div class="videos">
-					<div class="videos__video videos__video--full-width"></div>
-					<div class="videos__video videos__video--half-width"></div>
-					<div class="videos__video videos__video--half-width"></div>
+					<div class="videos__video videos__video--full-width">
+						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="videos__video videos__video--half-width">
+						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="videos__video videos__video--half-width">
+						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 			<div class="icons icons--light">
