--- a/pages/work.html
+++ b/pages/work.html
@@ -38,7 +38,9 @@
 						<div class="work-examples__item">
 							<div class="work-examples__category">Content</div>
 							<div class="work-examples__title">Content Video</div>
-							<div class="work-examples__video"></div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
 							<div class="work-examples__description">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 							</div>
@@ -47,7 +49,9 @@
 						<div class="work-examples__item">
 							<div class="work-examples__category">Events</div>
 							<div class="work-examples__title">UX NZ</div>
-							<div class="work-examples__video"></div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
 							<div class="work-examples__description">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 							</div>
@@ -56,7 +60,9 @@
 						<div class="work-examples__item">
 							<div class="work-examples__category">Campaigns</div>
 							<div class="work-examples__title">Pepsi Video</div>
-							<div class="work-examples__video"></div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
 							<div class="work-examples__description">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 							</div>
@@ -67,7 +73,9 @@
 						<div class="work-examples__item">
 							<div class="work-examples__category"></div>
 							<div class="work-examples__title"></div>
-							<div class="work-examples__video"></div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
 							<div class="work-examples__description">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 							</div>
@@ -76,7 +84,9 @@
 						<div class="work-examples__item">
 							<div class="work-examples__category"></div>
 							<div class="work-examples__title"></div>
-							<div class="work-examples__video"></div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
 							<div class="work-examples__description">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 							</div>
@@ -85,7 +95,9 @@
 						<div class="work-examples__item">
 							<div class="work-examples__category"></div>
 							<div class="work-examples__title"></div>
-							<div class="work-examples__video"></div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
 							<div class="work-examples__description">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 							</div>
