add who page and videos to work exzmples

--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -26,14 +26,14 @@
 	</header>
 	<main>
 		<div class="inner-container inner-container--strategy-page">
-			<div class="copy">
+			<div class="copy copy--light">
 				<h1>Thinking</h1>
 				<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
 			</div>
 			<div class="media">
-				
+				<img src="../imgs/TAG The Agency thinking page diagram-59.png">
 			</div>
-			<div class="icons icons">
+			<div class="icons icons--light">
 				<div class="icons__icon">
 					<div class="icons__image icons__image"></div>
 					<div class="icons__text">Icon 1</div>
@@ -43,7 +43,7 @@
 					<div class="icons__text">Icon 2</div>
 				</div>
 				<div class="icons__icon" ng-click="go('/')">
-					<div class="icons__image icons__image--home"></div>
+					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
 				</div>
 			</div>
