--- a/pages/work.html
+++ b/pages/work.html
@@ -36,70 +36,70 @@
 				<div class="work-examples">
 					<div class="work-examples__row-1">
 						<div class="work-examples__item">
-							<div class="work-examples__category">Content</div>
-							<div class="work-examples__title">Content Video</div>
-							<div class="work-examples__video">
-								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-							</div>
-							<div class="work-examples__description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
-							</div>
-							<div class="work-examples__color-strip"></div>
-						</div>
-						<div class="work-examples__item">
 							<div class="work-examples__category">Events</div>
-							<div class="work-examples__title">UX NZ</div>
+							<div class="work-examples__title">UX New Zealand</div>
 							<div class="work-examples__video">
-								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/Q8sTIb88cTU?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
+								<p>www.uxnewzealand.com</p>
 							</div>
 							<div class="work-examples__color-strip"></div>
 						</div>
 						<div class="work-examples__item">
-							<div class="work-examples__category">Campaigns</div>
-							<div class="work-examples__title">Pepsi Video</div>
+							<div class="work-examples__category">Advertising</div>
+							<div class="work-examples__title">Social Media Advertising</div>
 							<div class="work-examples__video">
-								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/VmeehmS5Hpo?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
+								<p></p>
+							</div>
+							<div class="work-examples__color-strip"></div>
+						</div>
+						<div class="work-examples__item">
+							<div class="work-examples__category">Advertising</div>
+							<div class="work-examples__title">Facebook Apps</div>
+							<div class="work-examples__video">
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/EEptGUcCBHg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+							</div>
+							<div class="work-examples__description">
+								<p></p>
 							</div>
 							<div class="work-examples__color-strip"></div>
 						</div>
 					</div>
 					<div class="work-examples__row-2">
 						<div class="work-examples__item">
-							<div class="work-examples__category"></div>
-							<div class="work-examples__title"></div>
+							<div class="work-examples__category">Production</div>
+							<div class="work-examples__title">Video Production</div>
 							<div class="work-examples__video">
-								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/74gs08F50jY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
+								<p></p>
 							</div>
 							<div class="work-examples__color-strip"></div>
 						</div>
 						<div class="work-examples__item">
-							<div class="work-examples__category"></div>
-							<div class="work-examples__title"></div>
+							<div class="work-examples__category">Production</div>
+							<div class="work-examples__title">Drone Footage</div>
 							<div class="work-examples__video">
-								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/X_bIawpAjmY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
+								<p></p>
 							</div>
 							<div class="work-examples__color-strip work-examples__color-strip--full-pink"></div>
 						</div>
 						<div class="work-examples__item">
-							<div class="work-examples__category"></div>
-							<div class="work-examples__title"></div>
+							<div class="work-examples__category">Production</div>
+							<div class="work-examples__title">Video Campaigns</div>
 							<div class="work-examples__video">
-								<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe class="videos_iframe" src="https://www.youtube.com/embed/BxQt03tX2qY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
+								<p>In conjunction with Pepsi and the team at Brand Spanking we brought the future back to Wellington.</p>
 							</div>
 							<div class="work-examples__color-strip work-examples__color-strip--half-pink"></div>
 						</div>
