--- a/pages/home.html
+++ b/pages/home.html
@@ -9,7 +9,7 @@
 	<header>
 		<div class="nav-top nav-top">
 			<ul class="nav-top__menu">
-				<li class="nav-top__menu-item">Who</li>
+				<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
 				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
 				<li class="nav-top__menu-item">How</li>
 				<li class="nav-top__menu-item">Store</li>
@@ -28,7 +28,7 @@
 		<div class="inner-container">		
 			<div class="cmyk-crosses">
 				<div class="cmyk-crosses__wrapper">
-					<div class="cmyk-crosses__item" ng-click="go('/production')">
+					<div class="cmyk-crosses__item" ng-click="go('/doing')">
 						<div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
 						<div class="cmyk-crosses__text--blue">Doing</div>
 					</div>
@@ -40,7 +40,7 @@
 						<div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
 						<div class="cmyk-crosses__text--yellow">Thinking</div>
 					</div>
-					<div class="cmyk-crosses__item" ng-click="go('/work')">
+					<div class="cmyk-crosses__item" ng-click="go('/done')">
 						<div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
 						<div class="cmyk-crosses__text--white">Done</div>
 					</div>
