add mobile portrait styles to team page

--- a/pages/home.html
+++ b/pages/home.html
@@ -36,7 +36,7 @@
 						<div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
 						<div class="cmyk-crosses__text--pink">VR Studio</div>
 					</div>
-					<div class="cmyk-crosses__item" ng-click="go('/strategy')">
+					<div class="cmyk-crosses__item" ng-click="go('/thinking')">
 						<div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
 						<div class="cmyk-crosses__text--yellow">Thinking</div>
 					</div>
