--- a/pages/who.html
+++ b/pages/who.html
@@ -8,11 +8,11 @@
 	<header>
 		<div class="nav-top nav-top--dark">
 			<ul class="nav-top__menu">
-				<li class="nav-top__menu-item">Who</li>
-				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
-				<li class="nav-top__menu-item">How</li>
-				<li class="nav-top__menu-item">Store</li>
-				<li class="nav-top__menu-item">Contact Us</li>
+				<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
+				<li class="nav-top__menu-item nav-top__menu-item--current" ng-click="go('/what')">What</li>
+				<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
+				<li class="nav-top__menu-item" ng-click="go('/store')">Store</li>
+				<li class="nav-top__menu-item" ng-click="go('/contact')">Contact Us</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
 			<div class="nav-top__burger-icon">
