add link to app store

--- a/pages/vr.html
+++ b/pages/vr.html
@@ -51,7 +51,7 @@
 					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
 				</div>
-				<div class="icons__icon">
+				<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
 					<div class="icons__image icons__image--app"></div>
 					<div class="icons__text">App</div>
 				</div>
