--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="tagApp">
 <head>
 	<title>Tag</title>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 	<script src="scripts/script.js"></script>
