--- a/pages/production.html
+++ b/pages/production.html
@@ -9,11 +9,13 @@
 	<header>
 		<div class="nav-top nav-top--light">
 			<ul class="nav-top__menu">
-				<li class="nav-top__menu-item">Who</li>
-				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
-				<li class="nav-top__menu-item">How</li>
-				<li class="nav-top__menu-item">Store</li>
-				<li class="nav-top__menu-item">Contact Us</li>
+			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
+			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
+			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
+			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
+			<li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li>
+			<li class="nav-top__menu-item" ng-click="go('/store')">Store</li>
+			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
 			<div class="nav-top__burger-icon">
