--- a/pages/work.html
+++ b/pages/work.html
@@ -8,11 +8,13 @@
 	<header>
 		<div class="nav-top nav-top--dark">
 			<ul class="nav-top__menu">
-				<li class="nav-top__menu-item">Who</li>
-				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
-				<li class="nav-top__menu-item">How</li>
-				<li class="nav-top__menu-item">Store</li>
-				<li class="nav-top__menu-item">Contact Us</li>
+				<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
+				<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
+				<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
+				<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
+				<li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li>
+				<li class="nav-top__menu-item" ng-click="go('/store')">Store</li>
+				<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
 			<div class="nav-top__burger-icon">
@@ -30,7 +32,7 @@
 				<p>How do we do what we do? What have we done?</p>
 				<p>Simple. We work with you and your brand to develop campigns and content that inspires your brand and community. From fun and fantastic to the business of business; TAG The Agency can create camapigns and content that hits the mark!</p>
 				<p>Need a little help with your advertising? Need it to win in social media? Not sure if your brand could play in this space? TAG us in; we'd love to play!</p>
-				<h2>Wanna play?</h2>
+				<!-- <h2>Wanna play?</h2> -->
 			</div>
 			<div class="media">
 				<div class="work-examples">
