--- a/pages/vr.html
+++ b/pages/vr.html
@@ -13,8 +13,8 @@
 			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
 			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
 			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
-			<li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li>
-			<li class="nav-top__menu-item" ng-click="go('/store')">Store</li>
+			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
+			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
 			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
@@ -55,7 +55,7 @@
 				</div>
 				<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
 					<div class="icons__image icons__image--app"></div>
-					<div class="icons__text">App</div>
+					<div class="icons__text"></div>
 				</div>
 			</div>
 		</div>	
