--- a/pages/who.html
+++ b/pages/who.html
@@ -8,8 +8,8 @@
 	<header>
 		<div class="nav-top nav-top--dark">
 			<ul class="nav-top__menu">
-			<li class="nav-top__menu-item nav-top__menu-item--active" ng-click="go('/what')">What</li>
-			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
+			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
+			<li class="nav-top__menu-item nav-top__menu-item--active" ng-click="go('/who')">Who</li>
 			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
 			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
 			<li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li>
