add object for staff members and use ng-repeat for staff

--- a/pages/partners.html
+++ b/pages/partners.html
@@ -12,8 +12,8 @@
 			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
 			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
 			<li class="nav-top__menu-item  nav-top__menu-item--active" ng-click="go('/partners')">Partners</li>
-			<li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li>
-			<li class="nav-top__menu-item" ng-click="go('/store')">Store</li>
+			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
+			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
 			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
