--- a/pages/home.html
+++ b/pages/home.html
@@ -13,8 +13,8 @@
 			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
 			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
 			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
-			<li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li>
-			<li class="nav-top__menu-item" ng-click="go('/store')">Store</li>
+			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
+			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
 			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
