--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 	<title>Tag</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 	<script src="scripts/script.js"></script>
 </head>
-<body>
-		<div ng-controller="mainController" ng-view></div>
+<body ng-controller="mainController">
+	<div class="animation-container">
+		<div class="fade-animation" ng-view></div>
+	</div>
+</body>
 </html>
