--- a/pages/work.html
+++ b/pages/work.html
@@ -47,6 +47,7 @@
 								<p>www.uxnewzealand.com</p>
 							</div>
 							<div class="work-examples__color-strip"></div>
+							<div class="loading-icon loading-icon--yellow"></div>
 						</div>
 						<div class="work-examples__item">
 							<div class="work-examples__category">Advertising</div>
