--- a/pages/vr.html
+++ b/pages/vr.html
@@ -38,12 +38,15 @@
 			<div class="media">
 				<div class="videos">
 					<div class="videos__video videos__video--full-width">
+						<div class="loading-icon loading-icon--yellow"></div>
 						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="videos__video videos__video--half-width">
+						<div class="loading-icon loading-icon--yellow"></div>
 						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="videos__video videos__video--half-width">
+						<div class="loading-icon loading-icon--yellow"></div>
 						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
