add hover to team photos

--- a/pages/personal.html
+++ b/pages/personal.html
@@ -29,7 +29,7 @@
 		<div class="inner-container">		
 			<div class="info-pages">
 				<div class="personal">
-					<div class="personal__image" style="background-image: url({{current_staff.thumbnail}})"></div>
+					<div class="personal__image" style="background-image: url({{current_staff.images[0]}})"></div>
 					<h1>{{current_staff.name}}</h1>
 					<div class="info-pages__content">
 						<p>{{current_staff.bio}}</p>
