--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script><script src="https://apis.google.com/js/api.js"></script>
-	<script src="scripts/script.js"></script>
+	<script src="scripts/angular.js"></script>
 </head>
 <body ng-controller="mainController">
 	<div class="animation-container">
 		<div class="fade-animation" ng-view></div>
 	</div>
+	<script src="scripts/script.js"></script>
 </body>
 </html>
