--- a/pages/who.html
+++ b/pages/who.html
@@ -34,7 +34,7 @@
 					<div class="team">
 						<div class="team__members-wrapper">
 							<div class="team__item" ng-repeat="person in staffObj">
-								<div class="team__image" style="background-image: url({{person.images[0]}});" ng-click="getCurrentStaffObj($event); go('/staff')" ng-mouseenter="toggleDisplay(person, true, $event)" ng-mouseleave="toggleDisplay(person, false, $event)"></div>
+								<div class="team__image" style="background-image: url({{person.images[0]}});" ng-click="getCurrentStaffObj($event); go('/staff')" ng-mouseenter="toggleDisplay(person, true, $event)" ng-mouseleave="toggleDisplay(person, false, $event)" data-id="{{person.id}}"></div>
 								<div class="team__name">{{person.name}}</div>
 								<div class="team__role">{{person.role}}</div>
 							</div>
