Add new matai logo and add rel unlimited to partners page

--- a/pages/personal.html
+++ b/pages/personal.html
@@ -35,6 +35,7 @@
 						<p>{{current_staff.bio}}</p>
 					</div>
 				</div>		
+				<div class="personal__images-wrapper"></div>
 			</div>
 		</div>
 	</main>
