--- a/pages/personal.html
+++ b/pages/personal.html
@@ -29,10 +29,10 @@
 		<div class="inner-container">		
 			<div class="info-pages">
 				<div class="personal">
-					<div class="personal__image" style="background-image: url({{current_staff.images[1]}})"></div>
-					<h1>{{current_staff.name}}</h1>
+					<div class="personal__image" style="background-image: url({{currentObj.images[1]}})"></div>
+					<h1>{{currentObj.name}}</h1>
 					<div class="info-pages__content">
-						<p>{{current_staff.bio}}</p>
+						<p>{{currentObj.bio}}</p>
 					</div>
 				</div>		
 				<div class="personal__images-wrapper"></div>
