--- a/pages/personal.html
+++ b/pages/personal.html
@@ -35,7 +35,12 @@
 						<p>{{currentObj.bio}}</p>
 					</div>
 				</div>		
-				<div class="personal__images-wrapper"></div>
+				<div class="personal-images">
+					<div style="background-image: url({{currentObj.images[2]}})" class="personal-images__image personal-images__image--1"></div>
+					<div style="background-image: url({{currentObj.images[3]}})" class="personal-images__image personal-images__image--2"></div>
+					<div style="background-image: url({{currentObj.images[4]}})" class="personal-images__image personal-images__image--3"></div>
+					<div style="background-image: url({{currentObj.images[5]}})" class="personal-images__image personal-images__image--4"></div>
+				</div>
 			</div>
 		</div>
 	</main>
