--- a/pages/personal.html
+++ b/pages/personal.html
@@ -11,7 +11,7 @@
 			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
 			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
 			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
-			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
+			<li class="nav-top__menu-item" ng-click="go('/partners'); currentObj=null">Partners</li>
 			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
 			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
 			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
