--- a/pages/vr.html
+++ b/pages/vr.html
@@ -28,12 +28,11 @@
 	</header>
 	<main>
 		<div class="inner-container">
-			<div class="copy copy--light copy--compact">
+			<div class="copy copy--light">
 				<h1>Virtual Reality Studios</h1>
 				<p>Welcome to VR studios. This is a specific division of TAG that has been established to bring marketing and advertising to life through Virtual Reality.</p>
 				<p>We have all the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smartphone app for your content.</p>
 				<p>Get in touch today; we'd love to help bring your brand to life, truly, from the virtual world!</p>
-				<p>Download our VR Studios app to get the very best virtual reality experience. We'll keep tge content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
 			</div>
 			<div class="media">
 				<div class="videos">
