add forward/back icons

--- a/pages/vr.html
+++ b/pages/vr.html
@@ -51,9 +51,15 @@
 				</div>
 			</div>
 			<div class="icons icons--light">
+				<div class="icons__icon" ng-click="go('/doing')">
+					<div class="icons__image icons__image--back icons__image--back--light"></div>
+				</div>
 				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
+				</div>
+				<div class="icons__icon" ng-click="go('/thinking')">
+					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
 				</div>
 				<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
 					<div class="icons__image icons__image--app"></div>
