--- a/pages/work.html
+++ b/pages/work.html
@@ -110,9 +110,15 @@
 				</div>
 			</div>
 			<div class="icons">
+				<div class="icons__icon" ng-click="go('/thinking')">
+					<div class="icons__image icons__image--back"></div>
+				</div>
 				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home"></div>
 					<div class="icons__text">Home</div>
+				</div>
+				<div class="icons__icon" ng-click="go('/influencers')">
+					<div class="icons__image icons__image--forward"></div>
 				</div>
 			</div>
 		</div>
