--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -36,9 +36,15 @@
 				<img src="../imgs/TAG The Agency thinking page diagram-59.png">
 			</div>
 			<div class="icons icons--light">
+				<div class="icons__icon" ng-click="go('/vr')">
+					<div class="icons__image icons__image--back icons__image--back--light"></div>
+				</div>
 				<div class="icons__icon" ng-click="go('/')">
 					<div class="icons__image icons__image--home icons__image--home--light"></div>
 					<div class="icons__text">Home</div>
+				</div>
+				<div class="icons__icon" ng-click="go('/done')">
+					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
 				</div>
 			</div>
 		</div>
