add transparent icons, adjust who page

--- a/pages/production.html
+++ b/pages/production.html
@@ -38,10 +38,10 @@
 						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="videos__video videos__video--half-width">
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+						<iframe class="videos_iframe" src="https://www.youtube.com/embed/LK_CNnOrUJQ?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="videos__video videos__video--half-width">
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+						<iframe class="videos_iframe" src="https://www.youtube.com/embed/74gs08F50jY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
