--- a/pages/who.html
+++ b/pages/who.html
@@ -28,7 +28,7 @@
 		<div class="inner-container">		
 			<div class="info-pages">
 				<h1>The Team</h1>
-				<p>Lorem ipsum dolor sit amet, cu cum nibh quas delicata, ei quaeque suavitate maiestatis sed, quem voluptaria sadipscing est et.</p>
+				<p>The team at TAG The Agency is a dedicated group of digital experts who are passionate about the game of social!</p>
 				<div class="info-pages__content">
 					<div class="team">
 						<div class="team__members-wrapper">
@@ -39,7 +39,7 @@
 							</div>
 						</div>
 						<div class="team__bottom-copy">
-							<p>Lorem ipsum dolor sit amet, singulis voluptatum intellegebat mea cu, sea ex porro etiam. Ne eum bonorum propriae efficiantur. Agam facer nobis in sit, ut dolores recteque sapientem sea. Pri ignota rationibus at. Eu nec esse dicat, odio inciderint ea nec. Eu qui noster tractatos accommodare. Eum recteque dissentiunt ex, sea natum autem at. Quas delicata at sea. Augue eruditi conceptam an sed, an eos reque utroque persequeris. Vel alia concludaturque an, eam in enim nostrud veritus. Regione nostrum mea ex, pro ea quod meis sadipscing, nec id dolor graeci.</p>
+							<p>With a wide range of in-house skills and experience TAG The Agency has the gameplay to help your business win on the digital fields of social.</p>
 						</div>
 					</div>
 				</div>
