--- a/pages/work.html
+++ b/pages/work.html
@@ -44,7 +44,7 @@
 								<iframe class="videos_iframe" src="https://www.youtube.com/embed/Q8sTIb88cTU?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>www.uxnewzealand.com</p>
+								<p></p>
 							</div>
 							<div class="work-examples__color-strip"></div>
 							<div class="loading-icon loading-icon--yellow"></div>
@@ -61,7 +61,7 @@
 							<div class="work-examples__color-strip"></div>
 						</div>
 						<div class="work-examples__item">
-							<div class="work-examples__category">Advertising</div>
+							<div class="work-examples__category">Creative</div>
 							<div class="work-examples__title">Facebook Apps</div>
 							<div class="work-examples__video">
 								<iframe class="videos_iframe" src="https://www.youtube.com/embed/EEptGUcCBHg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
@@ -102,7 +102,7 @@
 								<iframe class="videos_iframe" src="https://www.youtube.com/embed/BxQt03tX2qY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 							<div class="work-examples__description">
-								<p>In conjunction with Pepsi and the team at Brand Spanking we brought the future back to Wellington.</p>
+								<p></p>
 							</div>
 							<div class="work-examples__color-strip work-examples__color-strip--half-pink"></div>
 						</div>
