--- a/pages/work.html
+++ b/pages/work.html
@@ -17,7 +17,7 @@
 				<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon">
+			<div class="nav-top__burger-icon nav-top__burger-icon--dark">
 				<span></span>
 				<span></span>
 				<span></span>
