add contact page basics

--- a/pages/who.html
+++ b/pages/who.html
@@ -41,10 +41,22 @@
 						<div class="team__bottom-copy">
 							<p>With a wide range of in-house skills and experience TAG The Agency has the gameplay to help your business win on the digital fields of social.</p>
 						</div>
+							<div class="icons icons">
+								<div class="icons__icon" ng-click="go('/what')">
+									<div class="icons__image icons__image--back icons__image--back"></div>
+								</div>
+								<div class="icons__icon" ng-click="go('/')">
+									<div class="icons__image icons__image--home icons__image--home"></div>
+									<div class="icons__text">Home</div>
+								</div>
+								<div class="icons__icon" ng-click="go('/how')">
+									<div class="icons__image icons__image--forward icons__image--forward"></div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 	</main>
 	<footer>
 	</footer>
