--- a/pages/how.html
+++ b/pages/how.html
@@ -33,6 +33,18 @@
 			</div>
 			<div class="how">
 			</div>
+			<div class="icons icons">
+				<div class="icons__icon" ng-click="go('/who')">
+					<div class="icons__image icons__image--back icons__image--back"></div>
+				</div>
+				<div class="icons__icon" ng-click="go('/')">
+					<div class="icons__image icons__image--home icons__image--home"></div>
+					<div class="icons__text">Home</div>
+				</div>
+				<div class="icons__icon" ng-click="go('/partners')">
+					<div class="icons__image icons__image--forward icons__image--forward"></div>
+				</div>
+			</div>
 		</div>	
 	</main>
 </body>
