add new snail diagram

--- a/pages/work.html
+++ b/pages/work.html
@@ -30,7 +30,7 @@
 			<div class="copy">
 				<h1>Our Work</h1>
 				<p>How do we do what we do? What have we done?</p>
-				<p>Simple. We work with you and your brand to develop campigns and content that inspires your brand and community. From fun and fantastic to the business of business; TAG The Agency can create camapigns and content that hits the mark!</p>
+				<p>Simple. We work with you and your brand to develop campaigns and content that inspires your brand and community. From fun and fantastic to the business of business; TAG The Agency can create campaigns and content that hits the mark!</p>
 				<p>Need a little help with your advertising? Need it to win in social media? Not sure if your brand could play in this space? TAG us in; we'd love to play!</p>
 				<!-- <h2>Wanna play?</h2> -->
 			</div>
