--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -30,10 +30,10 @@
 		<div class="inner-container inner-container--strategy-page">
 			<div class="copy copy--light">
 				<h1>Thinking</h1>
-				<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
+				<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
 			</div>
 			<div class="media">
-				<img src="../imgs/TAG The Agency thinking page diagram-59.png">
+				<img src="../imgs/diagrams/Snail diagram updated-59.png">
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/vr')">
