add raw form to contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,6 +28,21 @@
 	</header>
 	<main>
 		<div class="inner-container">
+			<form class="contact-form">
+				<span>Name</span>
+				<br>
+				<input type="text">
+				<br>
+				<span>Email</span>
+				<input type="email">
+				<br>
+				<span>Phone</span>
+				<br>
+				<input type="text">
+				<br>
+				<span>Message</span>
+				<textarea></textarea>
+			</form>
 		</div>	
 	</main>
 </body>
