add form styles for mobile

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,21 +28,26 @@
 	</header>
 	<main>
 		<div class="inner-container">
-			<form class="contact-form">
-				<span>Name</span>
-				<br>
-				<input type="text">
-				<br>
-				<span>Email</span>
-				<input type="email">
-				<br>
-				<span>Phone</span>
-				<br>
-				<input type="text">
-				<br>
-				<span>Message</span>
-				<textarea></textarea>
-			</form>
+			<div class="contact-form">			
+				<form>
+					<span>Name</span>
+					<br>
+					<input class="contact-form__input contact-form__input--name" type="text">
+					<br>
+					<span>Email</span>
+					<input class="contact-form__input contact-form__input--email" type="email">
+					<br>
+					<span>Phone</span>
+					<br>
+					<input class="contact-form__input contact-form__input--phone" type="text">
+					<br>
+					<span>Message</span>
+					<br>
+					<textarea class="contact-form__input contact-form__input--message"></textarea>
+					<br>
+					<div class="contact-form__submit">SUBMIT</div>
+				</form>
+			</div>
 		</div>	
 	</main>
 </body>
