add contact form styles for laptops and monitors

--- a/pages/influencers.html
+++ b/pages/influencers.html
@@ -30,8 +30,8 @@
 		<div class="inner-container">
 			<div class="copy copy--light">
 				<h1>Influencers</h1>
-				<p>Talking the talk, thats the game of social media! At TAG The Agency we have a network of influencers that can help to leverage your brand.</p>
-				<p>We work with our influencers to follow the latest trends and to develop campaings thats have a strong impact; we don't just send them products on your behalf and hope they say something about it, we bring our influencers to the development of the campaign, working with them to get the best from their networks by creating content that works.</p>
+				<p>Talking the talk, that’s the game of social media! At TAG The Agency we have a network of influencers that can help to leverage your brand.</p>
+				<p>We work with our influencers to follow the latest trends and to develop campaigns that have a strong impact; we don't just send them products on your behalf and hope they say something about it, we bring our influencers to the development of the campaign, working with them to get the best from their networks by creating content that works.</p>
 			</div>
 			<div class="media">
 				<div class="influencer-list">
