add send mail function

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
 					<br>
 					<textarea class="contact-form__input contact-form__input--message"></textarea>
 					<br>
-					<div class="contact-form__submit">SUBMIT</div>
+					<div class="contact-form__submit" ng-click="sendEmail()">SUBMIT</div>
 				</form>
 			</div>
 		</div>	
